--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,30 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: lato;
 }
 
 /* header styles */
+header {
+  background-color: rgba(229, 84, 115, 0.1);
+}
 .intro {
   height: 850px;
-  background-color: rgba(229, 84, 115, 0.1);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  padding: 0 240px;
+  width: 1440px;
+  margin: auto;
 }
-.intro-details {
-  width: 708px;
-}
+
 .intro-title {
   color: #272727;
-  font-family: Lato;
   font-size: 80px;
   font-weight: 800;
 }
 
 .intro-desc {
   color: rgba(39, 39, 39, 0.6);
-  font-family: Lato;
   font-size: 18px;
   font-weight: 400;
   margin: 32px 0;
@@ -37,10 +37,61 @@
 .btn-primary {
   padding: 20px 43px;
   color: #fff;
-  font-family: Lato;
   font-size: 20px;
   font-weight: 700;
   background-color: #e55473;
   border: 0;
   border-radius: 5px;
+}
+
+.featured-flower {
+  width: 1440px;
+  margin: auto;
+  text-align: center;
+}
+
+.section-title {
+  color: #272727;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 800;
+  margin-top: 100px;
+}
+
+.featured-flower-container {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.benefit-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 1440px;
+  height: 320px;
+  background: rgba(39, 39, 39, 0.05);
+  margin: 128px auto;
+  text-align: center;
+}
+
+/* DEALS */
+
+.hot-deal {
+  width: 1922px;
+  height: 620px;
+  background: rgba(229, 84, 115, 0.05);
+}
+
+.deal-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding: 100px 400px;
+  text-align: center;
+}
+.deal-heading {
+  color: #272727;
+  font-size: 40px;
+  font-weight: 800;
 }
