--- a/styles.css
+++ b/styles.css
@@ -97,7 +97,7 @@ header {
 }
 
 /* SOCIAL */
-.social{
+.social {
   text-align: center;
 }
 
@@ -107,4 +107,33 @@ header {
   text-align: center;
   justify-content: center;
   margin: 70px 0;
+}
+
+.latest-deal {
+  width: 1440px;
+  height: 449px;
+  flex-shrink: 0;
+  margin: 60px auto;
+  background-image: url("images/Rectangle\ 9.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.input-field {
+  width: 700px;
+  height: 64px;
+  border-radius: 8px;
+  background: #fff;
+  border: 0;
+  margin: 0 20px;
+}
+.input-field::placeholder {
+  padding: 5px 10px;
+  color: rgba(39, 39, 39, 0.6);
+  font-size: 16px;
+  font-weight: 400;
 }
