--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,9 @@ header {
   font-size: 40px;
   font-weight: 800;
 }
+.pink {
+  color: #e55473;
+}
 
 /* SOCIAL */
 .social {
@@ -134,6 +137,33 @@ header {
 .input-field::placeholder {
   padding: 5px 10px;
   color: rgba(39, 39, 39, 0.6);
+  font-size: 16px;
+  font-weight: 400;
+}
+/* footer */
+footer {
+  height: 449px;
+  background-color: black;
+  text-align: center;
+}
+.footer-title {
+  color: #fff;
+  font-size: 48px;
+  font-weight: 800;
+  padding-top: 100px;
+}
+.footer-desc {
+  color: rgba(255, 255, 255, 0.9);
+  text-align: center;
+  padding: 60px 0;
+  font-size: 18px;
+  font-weight: 400;
+  width: 800px;
+  margin: auto;
+}
+footer small {
+  color: rgba(255, 255, 255, 0.4);
+  text-align: center;
   font-size: 16px;
   font-weight: 400;
 }
