--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ header {
   color: rgba(39, 39, 39, 0.6);
   font-size: 18px;
   font-weight: 400;
-  margin: 32px 0;
+  margin: 50px 0;
 }
 
 .intro-img {
@@ -48,6 +48,55 @@ header {
   width: 1440px;
   margin: auto;
   text-align: center;
+}
+
+.featured-flower-box-1 {
+  position: relative;
+  width: 464px;
+  height: 538px;
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(167, 33, 98, 0.15);
+}
+.featured-flower-box-2 {
+  position: relative;
+  width: 464px;
+  height: 538px;
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(5, 151, 160, 0.15);
+}
+
+.featured-flower-box-3 {
+  position: relative;
+  width: 464px;
+  height: 538px;
+  border-radius: 300px 300px 0px 0px;
+  background: rgba(71, 125, 17, 0.15);
+
+}
+.featured-text {
+  display: flex;
+  justify-content: space-around;
+  
+}
+
+.featured-text li {
+  text-decoration: underline;
+  font-weight: bold;
+  list-style: none;
+  padding-top: 40px;
+}
+
+.featured-img {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+}
+.featured-img-2 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .section-title {
